--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -308,7 +308,7 @@
 	     <!DOCTYPE html>
 <html>
 <head>
-<title>Vi du the marquee trong HTML</title>
+<title>Nguyễn Hoàng Phúc</title>
 </head>
 <body>
   <marquee id="marq" scrollamount="3" direction="left" loop="50" scrolldelay="0" behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()"style="border:blue 2px SOLID"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> Nguyễn Hoàng Phúc </marquee>
