--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -137,13 +137,13 @@
                             <h2 class="title titl--h1 Ubuntu">
                                 <b>Nguyễn Hoàng Phúc<img src="//ngocminh.it/all/svg/tich-xanh.svg" alt="Đã Xác Minh" style="height: 24px;" /></b>
                             </h2>
-                            <div class="skill-item" style="color: #ef9d64;"><b>(Tng)</b></div>
+                            <div class="skill-item" style="color: #ef9d64;"><b>(nhp)</b></div>
                             <ul class="header__social">
                                 <li>
                                     <a href="https://www.facebook.com/NguyenHoangPhuc.Wall/"><i class="fab fa-facebook"></i></a>
                                 </li>
                                 <li>
-                                    <a href="//zalo.me/0397641361"><i class="fas fa-phone"></i></a>
+                                    <a href="//zalo.me/03"><i class="fas fa-phone"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://www.instagram.com/_nhp.24th1"><i class="fab fa-instagram"></i></a>
