--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -143,7 +143,7 @@
                                     <a href="https://www.facebook.com/NguyenHoangPhuc.Wall/"><i class="fab fa-facebook"></i></a>
                                 </li>
                                 <li>
-                                    <a href="//zalo.me/03"><i class="fas fa-phone"></i></a>
+                                    <a href="//zalo.me/0363289805"><i class="fas fa-phone"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://www.instagram.com/_nhp.24th1"><i class="fab fa-instagram"></i></a>
