--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="profile__border">
                         <div class="profile__perfil">
                             <!-- Insert your image, according to the example size of the portfolio -->
-                            <img src="https://i.imgur.com/RDeDjAR.jpg" alt="">
+                            <img src="https://i.imgur.com/i1wg6Es.jpg" alt="">
                         </div>
                     </div>
 
