--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -15,7 +15,7 @@
         <meta content="Thông Tin Thanh Toán Của Nguyễn Hoàng Phúc !" property="og:title" />
         <meta content="https://cdn.trinhngocminh.com" property="og:url" />
         <meta content="Thông Tin Thanh Toán Của Nguyễn Hoàng Phúc !" property="og:site_name" />
-        <meta content="https://i.imgur.com/pL4Z7Sb.jpg" property="og:image" />
+        <meta content="https://i.imgur.com/i1wg6Es.jpg" property="og:image" />
         <meta content="website" property="og:type" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ngocminhvn/all/snow.css" />
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
